...
import 'package:moniz/Analysis/PieChart.dart';
import 'package:moniz/data/SimpleStore/tutorialStore.dart';
import 'package:moniz/data/transactions.dart';
import 'package:visibility_detector/visibility_detector.dart';

class Analysis extends ConsumerStatefulWidget {
  const Analysis({super.key});

  @override
  ConsumerState<ConsumerStatefulWidget> createState() => _AnalysisState();
}

class _AnalysisState extends ConsumerState<Analysis>
...
